Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   index.html
	modified:   src/js/index.js
	modified:   src/js/object.js

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
+                    <div id="erroSectionprato" class="alert alert-danger" style="display: none;"></div>
                     <form id="formularioPrato" method="post">
                         <div class="form-group">
                             <label for="nomePrato">Nome do Prato:</label>
@@ -89,6 +90,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
+                    <div id="erroSection" class="alert alert-danger" style="display: none;"></div>
                     <form id="formularioPedido" method="post">
                         <div class="form-group">
                             <label for="selectTypePratos">Selecione um tipo de Prato:</label>
